Find dirty segments in parallel